Rust,  Julia,  and Haskell "Hello, world!"
Have unit tests for Rust & Julia and _almost_  for Haskell. Not a bad start."

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,33 @@ main
 # Rust
 target/
 Cargo.lock
+**/*.rs.bk
+
+# Julia
+*.jl.cov
+*.jl.*.cov
+*.jl.mem
+deps/deps.jl
+
+# Hasekll
+dist
+dist-*
+cabal-dev
+*.o
+*.hi
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+.HTF/
+
