--- a/blocks/helloWorld/haskell/helloWorld.cabal
+++ b/blocks/helloWorld/haskell/helloWorld.cabal
@@ -34,7 +34,9 @@ test-suite helloWorld-test
   build-depends:       base
                      , helloWorld
                      , HUnit
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+                     , tasty >= 0.11
+                     , tasty-hunit >= 0.9
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   default-language:    Haskell2010
 
 source-repository head
