--- a/math/haskell/math.cabal
+++ b/math/haskell/math.cabal
@@ -1,14 +1,14 @@
-name:                gcd
+name:                math
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/gcd#readme
+homepage:            https://github.com/jad-b/math#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
-category:            Web
+author:              Jeremy Dobbins-Bucklad
+maintainer:          j.american.db@gmail.com
+copyright:           MPLv2.0
+category:            Mathematics
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
@@ -16,21 +16,21 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , Numbers
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
-source-repository head
-  type:     git
-  location: https://github.com/githubuser/gcd
-
-test-suite haskell-test
+test-suite math-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , gcd
-                     , tasty >= 0.11
-                     , tasty-hunit >= 0.9
+                     , math
+                     , tasty
+                     , tasty-hunit
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
+source-repository head
+  type:     git
+  location: https://github.com/jad-b/math
