--- a/math/haskell/math.cabal
+++ b/math/haskell/math.cabal
@@ -28,6 +28,7 @@ test-suite math-test
                      , math
                      , tasty
                      , tasty-hunit
+                     , tasty-smallcheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
