--- a/math/haskell/math.cabal
+++ b/math/haskell/math.cabal
@@ -15,8 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
-                     , Numbers
+  exposed-modules:     Numbers
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
