--- a/haskell/util/util.cabal
+++ b/haskell/util/util.cabal
@@ -4,21 +4,17 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1021d94b4c42308969453ce51ea1e073168c6e9a2e97d8e1f560513b0bb5a557
+-- hash: 4ed965a8bee52cc28b3efc33b1eebc4e90cd379f51c800b16e588653c3734b8f
 
-name:           math
+name:           util
 version:        0.1.0.0
-synopsis:       A modern format for Haskell packages
+synopsis:       Collection of utility functions
 description:    See README at <https://github.com/gallery/haskell/math#readme>
 category:       Development
 homepage:       https://github.com/jad-b/gallery#readme
 bug-reports:    https://github.com/jad-b/gallery/issues
 maintainer:     Jeremy Dobbins-Bucklad <j.american.db@gmail.com>
-license:        BSD3
-license-file:   LICENSE
 build-type:     Simple
-extra-source-files:
-    README.md
 
 source-repository head
   type: git
@@ -26,37 +22,14 @@ source-repository head
 
 library
   exposed-modules:
-      Numbers
-      Funk
-      BinaryMobile
+      FileSys
   other-modules:
-      EightQueens
-      LinkedList
-      Paths_math
+      Paths_util
   hs-source-dirs:
       src
   ghc-options: -Wall
   build-depends:
       base >=4.9 && <5
-  default-language: Haskell2010
-
-test-suite spec
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      BinaryMobile
-      EightQueens
-      Funk
-      LinkedList
-      Numbers
-      Paths_math
-  hs-source-dirs:
-      test
-      src
-  ghc-options: -Wall
-  cpp-options: -DTEST
-  build-tool-depends:
-      hspec-discover:hspec-discover
-  build-depends:
-      base >=4.9 && <5
+    , directory
+    , filepath
   default-language: Haskell2010
