--- a/haskell/stack.yaml
+++ b/haskell/stack.yaml
@@ -34,6 +34,9 @@ resolver: lts-12.20
 #  - wai
 packages:
 - math/
+- util/
+- type/
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
